--- a/assets/style.css
+++ b/assets/style.css
@@ -19,7 +19,7 @@ header h1 {
     font-weight: bold;
     display: inline;
     margin: 0;
-    font-size: 50px;
+    font-size: 40px;
     color: limegreen
 }
 
@@ -36,15 +36,19 @@ header nav {
 
 header nav ul li {
     display: inline;
+    
   }
   
 header nav ul li a {
     margin: 0 30px;
     font-weight: lighter;
     font-size: 22px;
+    
   }
   
   /* HEADER/NAV BAR STYLES END */
+
+  /* COOL SUBTITLES BAR BEGINS*/
 
 .hero {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
@@ -66,13 +70,79 @@ header nav ul li a {
     line-height: 1.2;
   }
 
+
 .hero-cta h2 {
-text-align: center;
-font-style: italic;
-font-size: 40px;
-color: lightgreen;
-text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    text-align: center;
+    font-style: italic;
+    font-size: 40px;
+    color: lightgreen;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 
 }
 
+h2{
+    color: lightgreen;
+    display: inline;
+    
+    
+}
+/* SUBTITLE BAR ENDS /*
   
+
+/* ABOUT ME STYLES */
+
+.section-title {
+    font-size: 30px;
+    border-right: 3px solid;
+    color: limegreen;
+  
+   
+}
+
+.primary-border {
+    border-color:magenta ;
+    margin: 10 20 10 20;
+    width: 60%;
+    
+   
+}
+.intro {
+    padding: 20px 35px;
+    font-size: 30px;
+    color: limegreen;
+   
+}
+  
+.intro p {
+    color: lightgreen;
+    font-size: 15px;
+    font-weight: bold;
+    flex-wrap: wrap;
+    
+}
+ /* END ABOUT ME STYLES */
+
+ /* WORK STYLES START */
+ 
+ .mywork {
+     padding: 20px 35px;
+     font-size: 30px;
+     color: limegreen;
+    
+}
+
+/* CONTACT ME SECTION STYLES START */
+
+ .contact {
+    padding: 20px 35px;
+    font-size: 30px;
+    color: limegreen;
+}
+
+
+
+/* EXTRAS */
+
+.flex-row {
+    display: flex;
+}
