--- a/assets/style.css
+++ b/assets/style.css
@@ -4,7 +4,7 @@
     padding: 0;
 }
 body {
-    color: lavender;
+    color:lavender;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -31,6 +31,7 @@ header a {
 header nav {
     float: right;
     margin: 7px 0px;
+    text-decoration: underline;
 
 }
 
@@ -48,7 +49,7 @@ header nav ul li a {
   
   /* HEADER/NAV BAR STYLES END */
 
-  /* COOL SUBTITLES BAR BEGINS*/
+  /* COOL SUBTITLES BAR STYLES START */
 
 .hero {
     background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
@@ -86,10 +87,10 @@ h2{
     
     
 }
-/* SUBTITLE BAR ENDS /*
+/* SUBTITLE BAR  STYLES END /*
   
 
-/* ABOUT ME STYLES */
+/* ABOUT ME STYLES START */
 
 .section-title {
     font-size: 30px;
@@ -103,6 +104,7 @@ h2{
     border-color:magenta ;
     margin: 10 20 10 20;
     width: 60%;
+    text-align: right;
     
    
 }
@@ -110,6 +112,8 @@ h2{
     padding: 20px 35px;
     font-size: 30px;
     color: limegreen;
+    text-align: right;
+
    
 }
   
@@ -119,17 +123,31 @@ h2{
     font-weight: bold;
     flex-wrap: wrap;
     
+    
 }
  /* END ABOUT ME STYLES */
 
  /* WORK STYLES START */
  
- .mywork {
+ .my-work {
      padding: 20px 35px;
      font-size: 30px;
      color: limegreen;
     
 }
+
+.top-pic{
+    color: magenta;
+}
+.mid-pic {
+    color: magenta;
+}
+
+.bot-pic{
+    color: magenta;
+}
+
+/* WORK STYLES END */
 
 /* CONTACT ME SECTION STYLES START */
 
@@ -138,7 +156,14 @@ h2{
     font-size: 30px;
     color: limegreen;
 }
+.contact-box {
+    display:flex;
+    justify-content: space-around;
+    text-decoration: underline;
+    
+}
 
+/* CONTACT ME STYLES END */
 
 
 /* EXTRAS */
