--- a/assets/style.css
+++ b/assets/style.css
@@ -2,10 +2,12 @@
     box-sizing: border-box;
     margin: 0;
     padding: 0;
+    
 }
 body {
-    color:lavender;
+    color: plum;
     font-family: Arial, Helvetica, sans-serif;
+    
 }
 
 /* HEADER/NAV BAR STYLES BEGINS */
@@ -153,7 +155,7 @@ h2{
     justify-content: center;
 }
 .top-pic img {
-    width: 78vw;
+    width: 76vw;
 }
 .work-card{
     position: relative;
@@ -162,7 +164,7 @@ h2{
 .work-card p {
     position: absolute;
     bottom: 0;
-    background-color: aqua;
+    background-color: white;
     padding: 5px;
 }
 
